New in v0.6.10 (2010/08/??)
----------------------------
Bugs closed in this release:
615449     Command-line verbosity parsing crash


New in v0.6.09 (2010/07/25)
----------------------------
Bugs closed in this release:
502609     Unknown error while uploading duplicity-full-signatures
539393     Duplicity returns 1 when continuing an interrupted backup
550455     duplicity doesn't handle with large files well
567738     --ssh-options options passing options to ssh do not work
576564     username not url decoded in backend (at least rsync)
579958     Assertion error "time not moving forward at appropriate pace"
582962     Diminishing performance on large files

Upgraded tahoebackend to new parse_url.
Fix to warning message in sshbackend.


New in v0.6.08b (2010/03/11)
----------------------------
Fix bug where encrypted backup without --gpg-options crashes.
This was a followup issue to bug 490619 released in 0.6.07.
This is attempt #2 -- not sure what happened to the patch,
but it did not show up in 0.6-series like it should have.


New in v0.6.08a (2010/03/11)
----------------------------
Fix bug where encrypted backup without --gpg-options crashes.
This was a followup issue to bug 490619 released in 0.6.07.


New in v0.6.08 (2010/03/07)
---------------------------
Bugs closed in this release:
519110     Need accurate man page info on use of scp/sftp usage.
532051     rdiffdir attempts to reference undefined variables with some command arguments
529869     TypeError: unsupported operand type(s) for -: 'NoneType' and 'int'
530910     TypeError: unsupported operand type(s) for +: 'NoneType' and 'str'


New in v0.6.07 (2010/02/28)
---------------------------
Bugs closed in this release:
459511     --tempdir option doesn't override TMPDIR
467391     [PATCH] WebDAV backend doesn't work
487686     re-add scp backend and make available via command line option
490619     Use optparse not getopt
497243     0.6.06, archive dir: cache desynchronization caused by remove*